# OtusHomework_12_MR

./: CMakeLists.txt  Distributor.hpp  README.md  TestHandlers.hpp  main.cpp
Map/: Map.hpp
Reduce/: Reduce.hpp
Shaffle/: Shaffle.hpp
Utils/: BlockManager.hpp
